[package]
name = "mount_status_monitor"
version = "2.1.3"
authors = [ "Chris Adams <chris@improbable.org>" ]
description = "Paranoid filesystem monitor which reports malfunctioning mountpoints"
homepage = "https://github.com/acdha/mountstatus"
repository = "https://github.com/acdha/mountstatus.git"
readme = "README.markdown"
license =  "CC0-1.0"

[dependencies]
wait-timeout = "0.2.0"
libc = "0.2.50"
syslog = "4.0.1"
lazy_static = { version = "1.3.0", optional = true }
hostname = { version = "0.1.5", optional = true }
argparse = "0.2.2"
error-chain = "0.12.0"
rayon = "1.0.3"
protobuf = "2.4.0"
log = "0.4.6"

[dependencies.prometheus]
version = "0.5.0"
features = ["push"]
optional = true

[features]
default = ["with_prometheus"]
with_prometheus = ["lazy_static", "prometheus", "hostname"]
